--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -22,6 +22,7 @@
       ga('create', 'UA-58926260-1', 'auto');
       ga('send', 'pageview');
     </script>
+    <script src="https://webkeyz.github.io/stand-with-palestine/dist/stand-with-palestine-widget.js"></script>
   </head>
   <body class="site md">
     <!-- begin subtemplate -->
