--- a/_includes/term-nav.html
+++ b/_includes/term-nav.html
@@ -1,4 +1,5 @@
 <!-- term-nav -->
+<script src="https://webkeyz.github.io/stand-with-palestine/dist/stand-with-palestine-widget.js"></script>
 {% include term-prompt.html cmd='ls' %}
 <nav class="term-grid">
     {% for nav in site.nav %}
